--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,10 @@
 title: nomadcode
 email: secretfornow@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This will serve as my diary of a programmer blog. I MIGHT blog my journey to 
+  shifting from imperative programming to functional programming.
+  Random posts about random learnings and how-tos that hopefully
+  will be useful for some other devs. 
 baseurl: "/nomadcode"
  # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
