--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: nomadcode
 email: secretfornow@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This will serve as my diary of a programmer blog. I MIGHT blog my journey to 
+  This will serve as my "diary of a programmer" blog. I MIGHT blog my journey to 
   shifting from imperative programming to functional programming.
   Random posts about random learnings and how-tos that hopefully
   will be useful for some other devs. 
